2007-12-15	Frank Richter	<frank.richter@gmail.com>

* Sanitized focus handling; now only one widget has focus (and gets focus
  notifications), not all widgets up in the widget tree.

2007-12-15	Frank Richter	<frank.richter@gmail.com>

* Changed the embedded browser object to not be a chrome wrapper any more.
  (I don't know what "chrome wrapper" exactly does, but it fixes some 
  rendering issues for some web sites. Also, "no chrome wrapper" fits better
  to web sites from a nomenclature point of view as well.)

2007-12-15	Frank Richter	<frank.richter@gmail.com>

* Sanitized mouse event distribution. Now distributes only to the (visible)
  child directly under the point of the event and not potentially to all
  widgets that contain the point of the event.

2007-12-15	Frank Richter	<frank.richter@gmail.com>

* Added "auto-focus" feature.

2007-12-13	Frank Richter	<frank.richter@gmail.com>

* Tweak keyboard input to support characters from Alt+/Ctrl+something keys.

2007-12-12	Frank Richter	<frank.richter@gmail.com>

* Mouse wheel events support.

2007-12-11	Frank Richter	<frank.richter@gmail.com>

* Resize support.

2007-12-11	Frank Richter	<frank.richter@gmail.com>

* Add focusing support and proper focus management. Proper focus management is 
  required for some things such as e.g. proper caret display.

2007-12-10	Frank Richter	<frank.richter@gmail.com>

* Fix build error with latest XULrunner CVS.

2007-12-10	Frank Richter	<frank.richter@gmail.com>

* Make antialiasing mode controllable.

2007-12-08	Frank Richter	<frank.richter@gmail.com>

* Fixed scrolling, painting and modifier issues.

2007-12-08	Frank Richter	<frank.richter@gmail.com>

* Changed modifier handling to always update internal state (and not just when
  gecko handled the event).

2007-12-08	Frank Richter	<frank.richter@gmail.com>

* Changed embedding object creation to take a (hidden) "API version" parameter
  which is used to make sure the used library matches the used header.
